--- a/src/main/resources/templates/relatorio/formularioRelatorio.html
+++ b/src/main/resources/templates/relatorio/formularioRelatorio.html
@@ -36,21 +36,18 @@
         <!-- Formulário para o usuário inserir parâmetros -->
         <form action="/relatorios" method="get">
             <label for="categoriaId">Categoria:</label>
-            <select name="categoriaId" id="categoriaId">
-                <option value="1" th:selected="${categoriaId == 1}">
-                    Categoria 1
-                </option>
-                <option value="2" th:selected="${categoriaId == 2}">
-                    Categoria 2
-                </option>
-                <option value="3" th:selected="${categoriaId == 3}">
-                    Categoria 3
+            <select class="form-select" name="categoriaId" required>
+                <option value="" disabled>Selecione uma Categoria</option>
+                <option th:each="categoria : ${categorias}" 
+                        th:value="${categoria.id}" 
+                        th:text="${categoria.nome}"
+                        th:selected="${categoria.id} == ${categoriaId}">
                 </option>
             </select>
             <br /><br />
-
+        
             <label for="status">Ativo:</label>
-            <select name="status" id="status">
+            <select name="status" required>
                 <option value="true" th:selected="${status == true}">
                     Ativo
                 </option>
@@ -59,7 +56,7 @@
                 </option>
             </select>
             <br /><br />
-
+        
             <button type="submit">Gerar Relatório</button>
         </form>
 
