refactor(Produto): troca o JS usado para remoção

--- a/src/main/resources/templates/produto/produtos.html
+++ b/src/main/resources/templates/produto/produtos.html
@@ -17,6 +17,6 @@
 
     <div th:replace="fragments/modal :: modal('produto')"></div>
 
-    <script type="text/javascript" th:src="@{/js/confirmarExclusao.js}"></script>
+    <script type="text/javascript" th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
