--- a/src/main/resources/templates/produto/ProdutoTabela.html
+++ b/src/main/resources/templates/produto/ProdutoTabela.html
@@ -21,7 +21,7 @@
                 <a th:href="@{/produtos/editar/{id}(id=${produto.id})}">
                     <i class="fa-solid fa-pen text-primary"></i>
                 </a>
-                <a th:attr="onclick=|deletarProduto('${produto.id}', '${produto.nome}')|"
+                <a th:attr="onclick=|deletarRegistro('${produto.nome}', '/produtos/excluir/${produto.id}')|"
                         type="button" data-bs-toggle="modal" data-bs-target="#modalId">
                     <i class="fa-solid fa-trash text-danger"></i>
                 </a>
