refactor: corrige pequenos erros de digitação em Categoria e ProdutoController

--- a/src/main/resources/templates/categoria/categorias.html
+++ b/src/main/resources/templates/categoria/categorias.html
@@ -25,7 +25,7 @@
     <div th:replace="categoria/CategoriaModalFormulario('Editar', '/categorias/editar', true, 'modalEdicao')"></div>
 
     <!-- Bootstrap Modal e JS próprio para exclusão -->
-    <div th:replace="fragments/modal :: modal('produto')"></div>
+    <div th:replace="fragments/modal :: modal('categoria')"></div>
     <script type="text/javascript" th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
