--- a/src/main/resources/templates/categoria/CategoriaModalFormulario.html
+++ b/src/main/resources/templates/categoria/CategoriaModalFormulario.html
@@ -22,7 +22,7 @@
                                name="descricao">
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary" th:text="${acao}"></button>
+                        <button type="submit" class="btn btn-primary" th:text=salvar></button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                     </div>
                 </form>
