--- a/src/main/resources/templates/relatorio/RelatorioTabela.html
+++ b/src/main/resources/templates/relatorio/RelatorioTabela.html
@@ -1,4 +1,4 @@
-<table th:fragment="tabela" th:if="${!#lists.isEmpty(relatorio)}">
+<table class = "produto-table  table table-striped" th:fragment="tabela" th:if="${!#lists.isEmpty(relatorio)}">
     <thead>
         <tr>
             <th>ID Produto</th>
