--- a/src/main/resources/templates/estoque/estoques.html
+++ b/src/main/resources/templates/estoque/estoques.html
@@ -3,10 +3,7 @@
     <head th:replace="fragments/head('Gerenciar Estoque')"> </head>
 
     <body>
-        <header>
-            <h1>Gerenciar Estoques</h1>
-            <a href="/">Voltar à Página Inicial</a>
-        </header>
+        <header th:replace="fragments/header('Gerenciar Estoques')"></header>
 
         <!-- Formulário para adicionar um novo estoque -->
         <main>
