--- a/src/main/resources/templates/funcionario/FuncionarioHome.html
+++ b/src/main/resources/templates/funcionario/FuncionarioHome.html
@@ -4,6 +4,8 @@
 <head th:replace="fragments/head('Gerenciar Funcionários')"></head>
 
 <body>
+    <header th:replace="fragments/header('Gerenciar Funcionários')"></header>
+
     <!-- Formulário para adicionar novo funcionário -->
     <a href="/funcionarios/adicionar">
         <input type="button" value="Adicionar novo funcionário" class="btn"/>
