--- a/src/main/resources/templates/relatorio/formularioRelatorio.html
+++ b/src/main/resources/templates/relatorio/formularioRelatorio.html
@@ -4,12 +4,7 @@
 <head th:replace="fragments/head('Relatório de Produtos')"></head>
 
 <body>
-    <header>
-        <h1>Gerar Relatório de Produtos</h1>
-        <a href="/">
-            <p><button class="btn_home">Voltar ao Início</button></p>
-        </a>
-    </header>
+    <header th:replace="fragments/header('Gerar Relatório de Produtos')"></header>
 
     <!-- Formulário para o usuário inserir parâmetros -->
     <main>
