--- a/src/main/resources/templates/itempedido/ItemPedidoHome.html
+++ b/src/main/resources/templates/itempedido/ItemPedidoHome.html
@@ -4,6 +4,8 @@
 <head th:replace="fragments/head('Gerenciar Itens Pedidos')"></head>
 
 <body>
+    <header th:replace="fragments/header('Gerenciar Itens Pedidos')"></header>
+
     <a href="/itens/adicionar">
         <input type="button" value="Adicionar novo item pedido" class="btn"/>
     </a>
