refactor(Front-End): novas mudanças nas tabelas e botoes no que foi adicionado

--- a/src/main/resources/templates/estoque/EstoqueTabela.html
+++ b/src/main/resources/templates/estoque/EstoqueTabela.html
@@ -1,4 +1,4 @@
-<table th:fragment="table">
+<table class=produto-table table table-striped th:fragment="table">
     <thead>
         <tr>
             <th>Localização</th>
