--- a/src/main/resources/templates/estoque/EstoqueFormulario.html
+++ b/src/main/resources/templates/estoque/EstoqueFormulario.html
@@ -50,11 +50,12 @@
                         th:errors="*{descricao}"
                     ></div>
                 </div>
-
+<div align=center>
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-primary">
                         Salvar
                     </button>
+                </div>
                 </div>
             </div>
         </form>
