--- a/src/main/resources/templates/estoque/estoques.html
+++ b/src/main/resources/templates/estoque/estoques.html
@@ -5,7 +5,11 @@
     <body>
         <header>
             <h1>Gerenciar Estoques</h1>
-            <a href="/">Voltar à Página Inicial</a>
+            
+            <a href="/">
+             <button type="submit" class="btn_home"> Voltar ao Inicio</button>
+            </a>
+            
         </header>
 
         <!-- Formulário para adicionar um novo estoque -->
